--- a/appsettings.json
+++ b/appsettings.json
@@ -2,7 +2,8 @@
   "ConnectionStrings": {
     //"DefaultConnection": "Server=LAPTOP-UIFSLK6G; Database=eCommerceDB;  User=sa; Password=123"
     //"DefaultConnection": "Data Source=LAPTOP-UIFSLK6G;Initial Catalog=eComerceDB1;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "DefaultConnection": "Data Source=DESKTOP-QFHHNEV\\SQLEXPRESS;Initial Catalog=eComerceDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    //"DefaultConnection": "Data Source=DESKTOP-QFHHNEV\\SQLEXPRESS;Initial Catalog=eComerceDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "DefaultConnection": "Server=tcp:bookstore123.database.windows.net,1433;Initial Catalog=bookstore;Persist Security Info=False;User ID=bookstore-db;Password=Passw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
@@ -10,6 +11,13 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "MailSettings": {
+    "Sender": "dangthao21051999@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "BookStore",
+    "Password": ""
   },
   "AllowedHosts": "*"
 }
