--- a/appsettings.json
+++ b/appsettings.json
@@ -17,7 +17,7 @@
     "SmtpServer": "smtp.gmail.com",
     "Port": 587,
     "Username": "BookStore",
-    "Password": ""
+    "Password": "SongThao@2105"
   },
   "AllowedHosts": "*"
 }
